fixed spacing for covers

--- a/css/style.css
+++ b/css/style.css
@@ -337,6 +337,6 @@ ul {
   font-weight: 300;
 }
 
-.pad--2 {
+.py--2 {
   padding-left: 2rem;
 }
